--- a/style.css
+++ b/style.css
@@ -410,3 +410,9 @@ body {
   top: 159%;
   color: rgb(161, 161, 161);
 }
+
+.width22333 {
+      position: relative;
+      padding: 40px 650px;
+      
+    }
